# tmonitor

./: .gitignore  Cargo.toml  README.md  tmonitor.example.toml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: prd.md
src/: check.rs  config.rs  display.rs  engine.rs  logging.rs  main.rs
