[package]
name = "tmonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_spanned = "0.6"
thiserror = "2"
tokio = { version = "1.52", features = ["rt", "macros", "signal", "time", "net", "sync"] }
surge-ping = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.52", features = ["rt", "macros", "time", "net", "sync", "signal"] }
